src/main/java/com/example/baekerrule/error/exception/ValidException.java
package com.example.baekerrule.error.exception;

public class ValidException extends RuntimeException {
    public ValidException(String msg) {
        super(msg);
    }
}
